[gd_scene load_steps=19 format=1]

[ext_resource path="res://laberinto.gd" type="Script" id=1]
[ext_resource path="res://assets/img/fondo_juego.png" type="Texture" id=2]
[ext_resource path="res://laberintoTileSet.tres" type="TileSet" id=3]
[ext_resource path="res://inventario.tscn" type="PackedScene" id=4]
[ext_resource path="res://personaje.gd" type="Script" id=5]
[ext_resource path="res://assets/laberinto/pugliese.jpg" type="Texture" id=6]
[ext_resource path="res://assets/laberinto/violin.png" type="Texture" id=7]
[ext_resource path="res://assets/laberinto/contrabajo.png" type="Texture" id=8]
[ext_resource path="res://assets/laberinto/badoneon.png" type="Texture" id=9]
[ext_resource path="res://assets/sonidos_ui/collision.wav" type="Sample" id=10]
[ext_resource path="res://assets/sonidos_ui/itemCollected.wav" type="Sample" id=11]
[ext_resource path="res://assets/sonidos_ui/walk.wav" type="Sample" id=12]
[ext_resource path="res://assets/sonidos_ui/win.wav" type="Sample" id=13]
[ext_resource path="res://sonidos.gd" type="Script" id=14]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="GDScript" id=2]

script/source = "
extends KinematicBody2D

func _ready():
	set_fixed_process(true)
"

[sub_resource type="Animation" id=3]

resource/name = "mostrar"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 514, -100 ), Vector2( 514, 360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect/rotation")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.7, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.06, 1.5, 3.33, 5.0, 9.57, 6.01, 0.0 ]
}

[sub_resource type="SampleLibrary" id=4]

samples/collision = {
"db": -1.2,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}
samples/itemCollected = {
"db": 10.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 11 )
}
samples/walk = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 12 )
}
samples/win = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 13 )
}

[node name="escena" type="Node2D"]

script/script = ExtResource( 1 )

[node name="fondo" type="Sprite" parent="."]

transform/pos = Vector2( 644.5, 365.5 )
transform/scale = Vector2( 1.73733, 1.51224 )
texture = ExtResource( 2 )
modulate = Color( 0.113281, 0.0674129, 0.0185852, 1 )

[node name="TileMap" type="TileMap" parent="."]

transform/pos = Vector2( 22, 22 )
transform/scale = Vector2( 0.165, 0.165 )
mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -524290, 9, -589817, 9, -589808, 9, -589799, 9, -589790, 9, -589781, 9, -589772, 9, -589764, 9, -589755, 9, -589746, 9, -589737, 9, -589728, 9, -589719, 9, -589710, 9, 65527, 7, 0, 0, 9, 6, 18, 5, 27, 5, 36, 2, 45, 7, 54, 14, 63, 14, 72, 14, 81, 14, 90, 9, 99, 11, 108, 12, 117, 14, 655351, 7, 589824, 2, 589833, 14, 589842, 9, 589851, 13, 589860, 1, 589869, 6, 589878, 4, 589887, 0, 589896, 5, 589897, 5, 589905, 6, 589914, 5, 589923, 1, 589932, 8, 589941, 14, 1245175, 7, 1179648, 3, 1179657, 14, 1179666, 2, 1179675, 5, 1179684, 0, 1179693, 12, 1179702, 11, 1179711, 9, 1179720, 8, 1179729, 14, 1179738, 14, 1179747, 3, 1179756, 10, 1179765, 14, 1834999, 7, 1769472, 2, 1769481, 5, 1769490, 10, 1769499, 0, 1769508, 9, 1769517, 8, 1769526, 10, 1769535, 2, 1769544, 0, 1769553, 2, 1769562, 0, 1769571, 3, 1769580, 12, 1769589, 14, 2424823, 7, 2359296, 14, 2359305, 14, 2359314, 1, 2359323, 5, 2359332, 0, 2359341, 13, 2359350, 4, 2359359, 1, 2359368, 11, 2359377, 1, 2359386, 8, 2359395, 9, 2359404, 9, 2359413, 14, 3014647, 7, 2949120, 7, 2949129, 11, 2949138, 10, 2949147, 8, 2949156, 1, 2949165, 12, 2949174, 1, 2949183, 8, 2949192, 7, 2949201, 2, 2949210, 9, 2949219, 1, 2949228, 5, 2949237, 14, 3604471, 7, 3538944, 6, 3538953, 6, 3538962, 5, 3538971, 2, 3538980, 0, 3538989, 11, 3538998, 0, 3539007, 5, 3539016, 9, 3539025, 6, 3539034, 4, 3539043, 0, 3539052, 9, 3539061, 14, 4194301, 11, 4128774, 11, 4128783, 11, 4128792, 11, 4128801, 11, 4128810, 11, 4128819, 11, 4128828, 12, 4128837, 12, 4128846, 12, 4128855, 12, 4128864, 10, 4128873, 10, 4128882, 10 )

[node name="inventario" parent="." instance=ExtResource( 4 )]

margin/left = -2.0
margin/top = 16.0
margin/right = 598.0
margin/bottom = 66.0

[node name="Sprite" parent="inventario"]

transform/pos = Vector2( 109.202, 28.4495 )

[node name="personaje" type="KinematicBody2D" parent="."]

transform/pos = Vector2( -6.02933, 4.522 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2.60103, 0.0744926, -0.0784478, 2.73914, 78.1362, 644.93 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 5 )

[node name="img_personaje" type="Sprite" parent="personaje"]

transform/pos = Vector2( 76.5261, 641.975 )
transform/rot = -2.71166
transform/scale = Vector2( 0.584082, 0.584082 )
texture = ExtResource( 6 )

[node name="collision_personaje" type="CollisionShape2D" parent="personaje"]

transform/pos = Vector2( 78.1362, 644.93 )
transform/rot = -1.64048
transform/scale = Vector2( 2.6021, 2.74026 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="items" type="Node2D" parent="."]

editor/display_folded = true

[node name="violin" type="Control" parent="items"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="violin" type="KinematicBody2D" parent="items/violin"]

transform/pos = Vector2( -6.02936, 104.455 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 3.3534, 0.0960402, -0.101139, 3.53145, 162.938, 246.702 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = SubResource( 2 )

[node name="img_personaje" type="Sprite" parent="items/violin/violin"]

transform/pos = Vector2( 166.442, 249.911 )
transform/rot = -2.71166
transform/scale = Vector2( 0.146593, 0.146593 )
texture = ExtResource( 7 )

[node name="collision_meta" type="CollisionShape2D" parent="items/violin/violin"]

transform/pos = Vector2( 162.938, 246.702 )
transform/rot = -1.64048
transform/scale = Vector2( 3.35478, 3.5329 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="contrabajo" type="Control" parent="items"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="contrabajo" type="KinematicBody2D" parent="items/contrabajo"]

transform/pos = Vector2( -400.21, 494.934 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 3.3534, 0.0960402, -0.101139, 3.53145, 669.119, -239.777 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = SubResource( 2 )

[node name="img_personaje" type="Sprite" parent="items/contrabajo/contrabajo"]

transform/pos = Vector2( 672.623, -236.568 )
transform/rot = -2.71166
transform/scale = Vector2( 0.146593, 0.146593 )
texture = ExtResource( 8 )

[node name="collision_meta" type="CollisionShape2D" parent="items/contrabajo/contrabajo"]

transform/pos = Vector2( 669.119, -239.777 )
transform/rot = -1.64048
transform/scale = Vector2( 3.35478, 3.5329 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="bandoneon" type="Control" parent="items"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 290.0
margin/top = 102.0
margin/right = 290.0
margin/bottom = 102.0

[node name="bandoneon" type="KinematicBody2D" parent="items/bandoneon"]

transform/pos = Vector2( -400.21, 494.934 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 3.3534, 0.0960402, -0.101139, 3.53145, 843.119, 42.2235 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = SubResource( 2 )

[node name="img_personaje" type="Sprite" parent="items/bandoneon/bandoneon"]

transform/pos = Vector2( 846.623, 45.4318 )
transform/rot = -2.71166
transform/scale = Vector2( 0.146593, 0.146593 )
texture = ExtResource( 9 )

[node name="collision_meta" type="CollisionShape2D" parent="items/bandoneon/bandoneon"]

transform/pos = Vector2( 843.119, 42.2235 )
transform/rot = -1.64048
transform/scale = Vector2( 3.35478, 3.5329 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="bandoneon2" type="Control" parent="items"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -87.0
margin/top = -89.0
margin/right = -87.0
margin/bottom = -89.0

[node name="bandoneon" type="KinematicBody2D" parent="items/bandoneon2"]

transform/pos = Vector2( -400.21, 494.934 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 3.3534, 0.0960402, -0.101139, 3.53145, 1604.12, 137.223 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = SubResource( 2 )

[node name="img_personaje" type="Sprite" parent="items/bandoneon2/bandoneon"]

transform/pos = Vector2( 1607.62, 140.432 )
transform/rot = -2.71166
transform/scale = Vector2( 0.146593, 0.146593 )
texture = ExtResource( 9 )

[node name="collision_meta" type="CollisionShape2D" parent="items/bandoneon2/bandoneon"]

transform/pos = Vector2( 1604.12, 137.223 )
transform/rot = -1.64048
transform/scale = Vector2( 3.35478, 3.5329 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="ganaste" type="Node2D" parent="."]

editor/display_folded = true

[node name="Panel" type="Panel" parent="ganaste"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 514.0
margin/top = -100.0
margin/right = 693.0
margin/bottom = -45.0

[node name="anim" type="AnimationPlayer" parent="ganaste/Panel"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/mostrar = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Label" type="Label" parent="ganaste/Panel"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = 3.0
margin/right = 63.0
margin/bottom = 21.0
text = "Ganaste!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sonidos_laberinto" type="SamplePlayer" parent="."]

process/pause_mode = 1
config/polyphony = 3
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 0
default/reverb_send = 0.04
default/chorus_send = 0.0
script/script = ExtResource( 14 )
is_playing = false

[node name="timerLargo" type="Timer" parent="sonidos_laberinto"]

process_mode = 0
wait_time = 0.5
one_shot = true
autostart = false

[node name="timerCorto" type="Timer" parent="sonidos_laberinto"]

process_mode = 0
wait_time = 0.15
one_shot = true
autostart = false

[connection signal="gane" from="." to="." method="_on_escena_gane" flags=6]

[connection signal="caminando" from="personaje" to="." method="_on_personaje_caminando"]

[connection signal="chocando" from="personaje" to="." method="_on_personaje_chocando"]


[editable path="inventario"]
